Fix dates to November 2025 and update README download instructions
- Update privacy policy dates from 2024 to 2025
- Update copyright year to 2025
- Clarify README to use Release ZIP (without screenshots) instead of source code ZIP
- Keep screenshots in repository for README display

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ site/
 # Release builds (created by build script)
 X-Flagr-v*.zip
 
+# Screenshots (for README only, not needed in extension)
+screenshots/
+
